src/sass/style.scss
@use './colors' as colors;
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	font-size: 62.5%;
	scroll-behavior: smooth;
	scroll-padding-top: 77px;
}

body {
	background-color: colors.$secondary-color;
	font-family: 'Montserrat', sans-serif;
	overflow-x: hidden;
	padding-top: 77px;
}

.wrapper {
	width: clamp(300px, 100%, 1200px);
	margin: 0 auto;
	padding: 0 2em;
}

// HEADER
.nav {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 100;
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 0 1em;
	background-color: colors.$secondary-color;
	transition: height 0.3;
	font-size: 2.1rem;
	&__logo {
		display: flex;
		justify-content: stretch;
		align-items: center;
		transition: font-size 0.3s;
		p {
			color: colors.$main-color;
			font-weight: 500;
		}
	}

	&__menu {
		display: block;
		position: fixed;
		top: 0;
		right: -300px;
		z-index: 100;
		height: 100vh;
		font-size: 0;
		justify-content: end;
		transition: right 0.8s;
		background-color: colors.$main-color;
		box-shadow: 0 0 10px #000;

		li {
			list-style-type: none;
			font-size: 0;
		}

		a {
			display: block;
			padding: 1.3em 3.3em 1.3em 2.3em;
			font-size: 2rem;
			text-decoration: none;
			text-wrap: nowrap;
			color: colors.$secondary-color;

			&:hover {
				background-color: colors.$secondary-color;
				color: colors.$main-color;
			}
		}
	}

	&__mobile-menu {
		right: 0;
	}

	&:hover {
		font-size: 2.8rem;
		.burger-btn {
			&__box {
				width: 60px;
			}

			&__bars {
				margin-bottom: 0.8em;
				&:last-child {
					margin-bottom: 0;
				}
			}
		}
	}
}

.burger-btn {
	background-color: colors.$secondary-color;
	border: none;
	padding: 1em;
	cursor: pointer;

	&__box {
		width: 53px;
		position: relative;
		padding: 1em;
		border: 1px solid colors.$soft-shadow;
		border-radius: 8px;
		transition: width 0.3s;
	}
	&__bars {
		height: 3px;
		width: 100%;
		display: block;
		margin-bottom: 0.5em;
		background-color: colors.$main-color;
		transition: margin-bottom 0.3s;
		&:last-child {
			margin-bottom: 0;
		}
	}
}

.header {
	position: relative;
	height: 200px;
	display: flex;
	align-items: center;
	background-image: url('../img/header.jpg');
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center;
	color: #fff;

	&:before {
		content: '';
		display: block;
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		background-color: rgba(0, 0, 0, 0.5);
		z-index: 0;
	}

	&__box {
		position: relative;
		padding: 0 1em;
		z-index: 1;
	}
	p {
		font-size: 1.5rem;
	}

	h1 {
		font-size: 2.2rem;
	}
}

// MAIN

.aboutus-section {
	padding-top: 3em;
	h2 {
		font-size: 3.2rem;
		font-weight: 200;
		text-align: center;
	}

	&__content {
		display: block;

		flex-direction: column;
		font-size: 1.5rem;
		text-align: justify;
		font-weight: 200;
		line-height: 1.8;
		margin-top: 2.5em;

		p {
			margin-bottom: 1em;
		}

		h3 {
			font-weight: 700;
			margin-bottom: 1em;
		}

		img {
			width: 100%;
		}

		.left-column {
			text-align: center;
		}
	}
}

.hero-img {
	position: relative;
	width: 100%;
	background-image: url('../img/hero.jpg');
	background-size: cover;
	background-position: center;
	padding: 5em 0;

	&::after {
		content: '';
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		background-color: rgba(0, 0, 0, 0.5);
		z-index: 0;
	}
	h2 {
		position: relative;
		display: block;
		width: 80%;
		margin: 0 auto;
		padding: 1em;
		border: 1px solid #fff;
		font-size: 2.3rem;
		font-weight: 600;
		color: #fff;
		text-align: center;
		z-index: 1;
	}
}

// Media

@media (576px <=width) {
	.nav {
		display: grid;
		grid-template-columns: 1fr 2fr;
		grid-template-rows: 1fr;
		padding: 0 1em;
		font-size: 3rem;

		&__logo {
			display: flex;
			justify-content: start;
			align-items: center;

			p {
				color: colors.$main-color;
				font-weight: 500;
				text-wrap: nowrap;
			}
		}

		&__menu {
			display: flex;
			position: unset;
			top: 0;
			right: 0;
			justify-content: end;
			transform: translateX(0);
			height: auto;
			background-color: colors.$secondary-color;
			box-shadow: none;
			a {
				padding: 1.3em 1.3em;
				font-size: 2rem;
				background-color: colors.$secondary-color;
				color: colors.$main-color;
				&:hover {
					background-color: colors.$main-color;
					color: colors.$secondary-color;
				}
			}
		}

		&:hover {
			font-size: 3rem;
			.burger-btn {
				&__box {
					width: 60px;
				}

				&__bars {
					margin-bottom: 0.8em;
					&:last-child {
						margin-bottom: 0;
					}
				}
			}
		}
	}

	.burger-btn {
		display: none;
	}

	.aboutus-section {
		&__content {
			font-size: 1.6rem;
			.right-column {
				padding-left: 2em;
			}

			img {
				max-width: 500px;
			}
		}
	}
	.hero-img {
		padding: 6em 0;
		h2 {
			font-size: 2.8rem;
		}
	}
}

@media (768px <= width) {
	.header {
		height: 300px;

		p {
			font-size: 1.9rem;
		}

		h1 {
			margin-top: 0.4em;
			font-size: 3.2rem;
		}
	}

	.aboutus-section {
		&__content {
			display: flex;
			flex-direction: row;
			justify-content: start;
			align-items: start;

			.right-column {
				padding-left: 3em;
			}

			img {
				width: 400px;
			}
		}
	}
	.hero-img {
		padding: 10em 0;
		h2 {
			font-size: 3.2rem;
		}
	}
}

@media (992px <= width) {
	.header {
		height: 400px;

		p {
			font-size: 2rem;
		}

		h1 {
			margin-top: 0.4em;
			font-size: 3.3rem;
		}
	}
	.hero-img {
		padding: 13em 0;
		h2 {
			font-size: 3.7rem;
		}
	}
}

